--- a/clock.css
+++ b/clock.css
@@ -3,7 +3,7 @@ body {
     
     background-color: #ffffff;
     font-family: 'UnfamiliarFont', sans-serif;
-    background-image: url(https://i.postimg.cc/vZD2F3ft/dark-blue-4k-ultra-hd-tunnel-m3bpybou8ih2x9g5.webp);
+    background-image: url(https://i.postimg.cc/prfYzc4z/4k-ultra-hd-dark-planetary-horizon-piy4jdno7i53zev5.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,15 +25,15 @@ body {
     width: 350px;
     height: 350px;
 
-    border: 15px solid rgb(17, 0, 0);
+    border: 15px solid rgb(10, 0, 0);
     position: relative;
     border-radius: 25px;
-    box-shadow: 0 0 10px rgb(255, 2, 2);
+    box-shadow: 0 0 10px rgb(2, 61, 255);
     transition: 0.5s;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    background-color: ;
+    background-image: url();
 
 }
 
@@ -54,26 +54,26 @@ body {
 
 .hour-hand {
     height: 10px;
-    background: rgb(68, 0, 255);
+    background: rgb(235, 240, 252);
     border-radius: 12px;
     transition: all 0.5s;
-    filter: drop-shadow(10px 10px 12px rgb(68,0,255));
+    filter: drop-shadow(10px 10px 12px rgb(14, 14, 14));
 }
 
 .minute-hand {
     height: 6px;
-    background: rgb(255, 2, 44);
+    background: rgb(72, 73, 92);
     border-radius: 12px;
     transition: all 0.5s;
-    filter: drop-shadow(10px 10px 12px rgb(255, 2, 23));
+    filter: drop-shadow(10px 10px 12px rgb(75, 78, 110));
 }
 
 .second-hand {
     height: 4px;
-    background:rgb(255, 207, 255);
+    background:rgb(214, 207, 255);
     border-radius: 12px;
     transition: all 0.5s;
-    filter: drop-shadow(10px 10px 12px rgb(53, 0, 247));
+    filter: drop-shadow(10px 10px 12px rgb(0, 0, 0));
 }
 
 .digital-clock {
@@ -88,8 +88,8 @@ body {
 }
 .time{
     width: 100%;
-    color: rgb(0, 4, 255);
-    filter: drop-shadow(0 0 19px rgb(0,4,255));
+    color: rgb(0, 58, 250);
+    filter: drop-shadow(0 0 19px rgb(121, 140, 155));
     font-weight: bolder;
     font-size: larger;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -109,7 +109,7 @@ body {
         margin-right:2% ;
         background-color: #ffffff;
         font-family: 'UnfamiliarFont', sans-serif;
-        background-image: url(https://i.postimg.cc/vZD2F3ft/dark-blue-4k-ultra-hd-tunnel-m3bpybou8ih2x9g5.webp);
+        background-image: url(https://i.postimg.cc/prfYzc4z/4k-ultra-hd-dark-planetary-horizon-piy4jdno7i53zev5.webp);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
