--- a/clock.css
+++ b/clock.css
@@ -3,7 +3,7 @@ body {
     
     background-color: #ffffff;
     font-family: 'UnfamiliarFont', sans-serif;
-    background-image: url(https://i.postimg.cc/prfYzc4z/4k-ultra-hd-dark-planetary-horizon-piy4jdno7i53zev5.webp);
+    background-image: url(https://i.postimg.cc/sfMpzx27/elliott-engelmann-Djl-Kx-YFJl-Tc-unsplash.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -109,7 +109,7 @@ body {
         margin-right:2% ;
         background-color: #ffffff;
         font-family: 'UnfamiliarFont', sans-serif;
-        background-image: url(https://i.postimg.cc/prfYzc4z/4k-ultra-hd-dark-planetary-horizon-piy4jdno7i53zev5.webp);
+        background-image: url(https://i.postimg.cc/sfMpzx27/elliott-engelmann-Djl-Kx-YFJl-Tc-unsplash.jpg);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
